[tool.poetry]
name = "riot-api"
version = "0.1.0"
description = ""
authors = ["Yves Kleny <yves.kleny.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pygsheets = "^2.0.6"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
